@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 1, 2008</p>
+      <p>Last Updated: November 2, 2008</p>
     </td>
   </tr>
 </table>
@@ -1114,6 +1114,8 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 nuttx-0.3.18 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Added port for the STMicro STR71x processor and configuration for the Olimex STR-P711
 	  board (untested as of the initial checkin).
+	* Fix race condition workaround delay in LPC214X SPI logic.  It the cause of the very
+	  bad MMC/SD performance.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
